ubuntu and php7

--- a/nginx.conf
+++ b/nginx.conf
@@ -62,6 +62,21 @@ http {
 
         include /etc/nginx/conf.d/*.conf;
         include /etc/nginx/sites-enabled/*;
+
+        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
+        #
+        #location ~ \.php$ {
+        #        try_files $uri =404;
+        #        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        #        # NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
+        #
+        #        # With php7-cgi alone:
+        #        #fastcgi_pass 127.0.0.1:9000;
+        #        # With php7-fpm:
+        #        fastcgi_pass unix:/var/run/php7-fpm.sock;
+        #        fastcgi_index index.php;
+        #        include fastcgi_params;
+        #}
 }
 
 
